[package]
name = "crashtv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
kiddo = "0.2.4"
log = "0.4.17"
nalgebra = { version ="0.31.4", features = ["serde-serialize"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = "1.0.151"
serde_derive = "1.0.151"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
