[package]
name = "crashtv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fps_counter = "2.0.0"
futures-util = "0.3.28"
kiddo = "0.2.5"
log = "0.4.20"
nalgebra = { version ="0.31.4", features = ["serde-serialize"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = "1.0.188"
serde_derive = "1.0.188"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", git = "https://github.com/kazk/warp.git", branch = "feature/permessage-deflate" }
noise = { version = "0.8.2", features = ["images"] }
image = { version = "0.24.7" }
bevy_ecs = "0.12.0"
